bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:4: error: ')' expected but 'else' found.
  }else{
   ^