bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if((Math.abs(n-100)<=10 && Math.abs(n-100)>=0)) || (Math.abs(n-200)<=10 && Math.abs(n-200>=0){
    return true
  }else{
    return false
  }
}